option java_package = "eu.fbk.mpba.sensorsflows.plugins.outputs.litix";

message SensorData {
    required sint32 sensor_id = 1;
    required int64 timestamp = 2;
    repeated double value = 3 [packed=true];
}

message SensorEvent {
    required sint32 sensor_id = 1;
    required int64 timestamp = 2;
    required sint32 code = 3;
    required string message = 4;
}

message SensorInfo {
    required sint32 sensor_id = 1;
    optional string device = 2;
    optional string type = 3;
    required string name = 4;
    repeated string channels = 5;
}

message SessionMeta {
    required string key = 1;
    required string value = 2;
}

message TrackSplit {
    required string track_name = 1;
    repeated SensorInfo sensors = 2;
    repeated SensorData data = 3;
    repeated SensorEvent events = 4;
    repeated SessionMeta meta = 5;
}

// protoc.exe --java_out=SensorsFlows\plugins\src\main\java\ -I SensorsFlows\plugins\src\main\java\eu\fbk\mpba\sensorsflows\plugins\outputs\litix SensorsFlows\plugins\src\main\java\eu\fbk\mpba\sensorsflows\plugins\outputs\litix\litix.proto
